# learnopengl

.cache/clangd/index/: 5_8_1.cpp.79B00EFC102A7C68.idx  5_8_2.cpp.68EE2D88AE7EA2FF.idx  _fixes.hpp.F1D817876679AF36.idx  _vectorize.hpp.59886551E63358F3.idx  camera.h.9384F73F250B341F.idx  common.hpp.B221EA3475291701.idx  compute_common.hpp.C10EF7F51EF359F0.idx  compute_vector_decl.hpp.B2F5037A65F658E8.idx  compute_vector_relational.hpp.337BDFF5D4F7DB5F.idx  constants.hpp.CA00F43468EABDDD.idx  constants.inl.FBF3D17C5E919A43.idx  epsilon.hpp.73FFDD6D0E0B47E1.idx  epsilon.inl.811CC3AFA93F43D6.idx  exponential.hpp.F709A45951273F06.idx  func_common.inl.57A9DDAE1B1FB621.idx  func_exponential.inl.0DACF484C8799199.idx  func_geometric.inl.07CE71A6B6F8CC20.idx  func_matrix.inl.5177827F6761BAEB.idx  func_trigonometric.inl.2B94BFEAAFF03ACB.idx  func_vector_relational.inl.ECF23B6590ACEC40.idx  geometric.hpp.5EC9F1E8DEDEDD70.idx  glad.cpp.DDAEAABBDF9F0D58.idx  glad.h.3A695C006BB5FCC3.idx  glfw3.h.B40F4A2DC9F0BB88.idx  khrplatform.h.D8AE9C4DC9C262CD.idx  main.cpp.8651A373CC4F97D0.idx  mat2x2.hpp.3412943BB8061743.idx  mat2x3.hpp.69C2750FCDC2AF49.idx  mat2x4.hpp.8436603A11DAA10C.idx  mat3x2.hpp.6747217A52906DF5.idx  mat3x3.hpp.02AE6EAEEFBB7226.idx  mat3x4.hpp.33F16C517F235795.idx  mat4x2.hpp.67AD87F17966487F.idx  mat4x3.hpp.BB1F44635D2CBBFF.idx  mat4x4.hpp.E4D7E468E357048C.idx  matrix.hpp.2696676240155D90.idx  matrix_clip_space.hpp.0985B1750C59DCE1.idx  matrix_clip_space.inl.5AA8518C7AF8D9AE.idx  (+149 more)
Include/glad/: glad.h
models/floor/: floor.mtl
models/monke/: Suzanne.mtl
models/noiseCube/: Untitled.mtl
models/pawn/: LOW_POLY_piece_Pawn.mtl
models/woodCube/: woodCube.mtl
shaders/: bordershader.frag  positiononly.vert  rayTracerDisplay.frag  rayTracerDisplay.vert  raytracer.frag  raytracer.vert  redShader.frag  shader.frag  shader.vert  wshader.frag  wshader.vert
src/: CMakeLists.txt  InputState.h  MoveObjectsWithMouseScene.h  RandomBoxesScene.h  RayTracedScene.h  boundingbox.h  bvh.h  camera.h  glad.cpp  interval.h  main.cpp  mesh.h  model.h  ray.h  rayTracingCamera.h  scene.h  screenToWorldSpace.h  shader.h  shader.vert
src/exercise/: 5_8_1.cpp  5_8_2.cpp
